add some links/ Maybe git workflow ne tak go??a i tak soidet in this moment

--- a/jarvis.html
+++ b/jarvis.html
@@ -27,17 +27,16 @@
 
 		</style>
 	</head>
+
 	<body>
-		<section>
+	
 
 
  	<h1> Hi, on this page we start creating welcome default page to my browser with different last links and <br> some sort of diary </h1>
- 	<button onclick="ClickTobutton">Цвет фона</button>
- 	<script type="text/javascript">
- 		function ClickTobutton(){
- 			Body.style.background-color(#FFFFFF); // something go wrong with my JS code... 
- 		}
- 	</script>
+
+ 	<button onclick="document.body.style.color='#FFFFFF'">Цвет фона</button>
+
+
  	<p><a href="https://gitlab.com/Sthink/backup_folder "> Link to repository on GitLab  </a></p>
  		<h2>	<a href="https://learn.freecodecamp.org/"> Link to Freecodecamp.org</a> </h2>
  	<p> and another simmular resourse</p>
@@ -121,10 +120,11 @@ Internet Historian
 <p><a href="https://datasift.github.io/gitflow/IntroducingGitFlow.html "> https://datasift.github.io/gitflow/IntroducingGitFlow.html  </a></p>
 <p><a href="https://www.displayspecifications.com/ru/model/53aa12e0 "> https://www.displayspecifications.com/ru/model/53aa12e0  </a></p>
 <p><a href="https://www.youtube.com/watch?v=v0ttYrw3KjA&t=94s ">  Айтиборода - интервью с М.Дорофеевым </a></p>
-<p><a href=" ">   </a></p>
-<p><a href=" ">   </a></p>
-<p><a href=" ">   </a></p>
-<p><a href=" ">   </a></p><p>
+<p><a href="https://www.youtube.com/watch?v=ac6IayXpXg0"> Почему обезьяны не превращаются в людей? Станислав Дробышевский  </a></p>
+<p><a href="https://www.youtube.com/watch?v=V3fYNIFQ30s"> Станислав Дробышевский: Наш мозг – это просто стечение эволюционных обстоятельств  </a></p>
+<p><a href="https://dtf.ru/gamedev/93505-grand-theft-auto ">  Grand Theft Auto
+Лонгрид о создании знаменитой серии </a></p>
+<p><a href="https://szotin.livejournal.com/22816.html "> Почему я программист szotin livejournal и еще Историю одного байта, и Один день продюсера 11-bit studios нужно найти и сохранить ниже   </a></p><p>
 	<a href=" ">   </a></p>
 <p><a href=" ">   </a></p>
 
@@ -146,7 +146,6 @@ Internet Historian
 
  		<p> и сверстать аналог.</p>
 
- 		</section>
 	<body>
 
 </html>
